[gd_scene load_steps=5 format=3 uid="uid://cye4b23hfd3v"]

[ext_resource type="Script" uid="uid://dtahcwy5wcmig" path="res://scripts/Locations/BibliotecaQuadro.gd" id="1_vdb2s"]
[ext_resource type="PackedScene" uid="uid://d2e8pvefg1rge" path="res://scenes/Player.tscn" id="2_isgb7"]
[ext_resource type="Texture2D" uid="uid://pk42lcy4f41a" path="res://assets/backgrounds/biblioteca_quadro.png" id="2_qwe5y"]
[ext_resource type="PackedScene" uid="uid://bcylxj15aelv3" path="res://scenes/UI/DialogBox.tscn" id="3_v5e7i"]

[node name="BibliotecaQuadro" type="Node2D"]
script = ExtResource("1_vdb2s")

[node name="Background" type="TextureRect" parent="."]
offset_right = 1539.0
offset_bottom = 1029.0
texture = ExtResource("2_qwe5y")
expand_mode = 1
stretch_mode = 6

[node name="Player" parent="." instance=ExtResource("2_isgb7")]
position = Vector2(296, 775)

[node name="StartMinigameButton" type="Button" parent="."]
offset_left = 609.0
offset_top = 534.0
offset_right = 909.0
offset_bottom = 634.0
text = "Iniciar Crossword"

[node name="Label" type="Label" parent="."]
offset_left = 544.0
offset_top = 432.0
offset_right = 993.0
offset_bottom = 484.0
text = "Palavras Cruzadas em InglÃªs"
horizontal_alignment = 1

[node name="ReturnButton" type="Button" parent="."]
offset_left = 27.0
offset_top = 886.0
offset_right = 127.0
offset_bottom = 936.0
text = "Voltar"

[node name="HomeButton" type="Button" parent="."]
offset_left = 1405.0
offset_top = 880.0
offset_right = 1505.0
offset_bottom = 944.0
text = "Home"

[node name="UI" type="CanvasLayer" parent="."]
visible = false

[node name="DialogBox" parent="UI" instance=ExtResource("3_v5e7i")]
